# LOPF

./: README.md
LeGO-LOAM-master/LeGO-LOAM/launch/: test.rviz
hdl_people_tracking/: CMakeLists.txt  data.txt  package.xml
hdl_people_tracking/apps/: hdl_people_detection_nodelet.cpp  hdl_people_tracking_nodelet.cpp
hdl_people_tracking/include/hdl_people_detection/: marcel_people_detector.hpp  people_detector.h
hdl_people_tracking/include/hdl_people_tracking/: people_tracker.hpp  rviz_cxy.rviz
hdl_people_tracking/launch/: mini_display.launch  online_data.launch  run_with_control.launch
hdl_people_tracking/model/: model.md  mymodel2.h5  mymodel3.h5  mymodel4.h5  mymodel6.h5  mymodel8.h5
hdl_people_tracking/msg/: Cluster.msg  myClusters.msg
hdl_people_tracking/scripts/: extractF.py  extractFeature.py  mymodel7W.h5  plotModel.py  publish_markers.py  receive_pcl.py  train.py
hdl_people_tracking/src/: input.cc  mini_control.cpp  moving_average.cpp  people_detector.cpp  pos2vel.cpp
hdl_people_tracking/urdf/: MiniLiteC.urdf
learning_PCL/: CMakeLists.txt  package.xml
learning_PCL/launch/: test.launch
learning_PCL/src/: ransac.cpp  svm.cpp
message_transformer_cpp_track_ball/: CMakeLists.txt  package.xml
message_transformer_cpp_track_ball/include/: input.h  moving_average.h
message_transformer_cpp_track_ball/launch/: message_transformer_cpp.launch  vel_control.launch
message_transformer_cpp_track_ball/src/: input.cc  qnx2ros.cpp  ros2qnx.cpp
